// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarGroupAction Snapshot Tests should match snapshot with SVG icon 1`] = `
<button
  class="mat-mdc-button mat-icon-button absolute top-3.5 right-3 flex items-center justify-center w-5 h-5 p-0 rounded-md transition-transform focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-gray-200 dark:hover:bg-gray-700 [&>svg]:w-4 [&>svg]:h-4 [&>svg]:shrink-0 group-data-[collapsible=icon]:hidden"
  data-sidebar="group-action"
  data-slot="sidebar-group-action"
  data-testid="sidebar-group-action"
>
  <svg>
    Icon
  </svg>
</button>
`;

exports[`SidebarGroupAction Snapshot Tests should match snapshot with custom className 1`] = `
<button
  class="mat-mdc-button mat-icon-button absolute top-3.5 right-3 flex items-center justify-center w-5 h-5 p-0 rounded-md transition-transform focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-gray-200 dark:hover:bg-gray-700 [&>svg]:w-4 [&>svg]:h-4 [&>svg]:shrink-0 group-data-[collapsible=icon]:hidden custom-action"
  data-sidebar="group-action"
  data-slot="sidebar-group-action"
  data-testid="sidebar-group-action"
>
  <span>
    Action
  </span>
</button>
`;

exports[`SidebarGroupAction Snapshot Tests should match snapshot with default props 1`] = `
<button
  class="mat-mdc-button mat-icon-button absolute top-3.5 right-3 flex items-center justify-center w-5 h-5 p-0 rounded-md transition-transform focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-gray-200 dark:hover:bg-gray-700 [&>svg]:w-4 [&>svg]:h-4 [&>svg]:shrink-0 group-data-[collapsible=icon]:hidden"
  data-sidebar="group-action"
  data-slot="sidebar-group-action"
  data-testid="sidebar-group-action"
>
  <span>
    Action
  </span>
</button>
`;
